HDL ANT Deployment Package/retrieveUnpackaged/objects/Location__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copia_Client_ID__c</fullName>
        <label>Copia Client ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Screening_Date__c</fullName>
        <label>1st Screening Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Main_Location__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Main Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location_ID__c</fullName>
        <label>Location ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Phone__c</fullName>
        <label>Location Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Location_Type__c</fullName>
        <label>Location Type</label>
        <picklist>
            <picklistValues>
                <fullName>Alternate Client Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Draw Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remit To</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ship To</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Employees__c</fullName>
        <label>Number of Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Salesperson__c</fullName>
        <label>Salesperson</label>
        <picklist>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2nd_Screening_Date__c</fullName>
        <label>2nd Screening Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X3rd_Screening_Date__c</fullName>
        <label>3rd Screening Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ZIP_Postal_Code__c</fullName>
        <label>ZIP/Postal Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <label>Location</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Locations</pluralLabel>
    <recordTypes>
        <fullName>Retail</fullName>
        <active>true</active>
        <description>Used for retail Locations</description>
        <label>Retail</label>
    </recordTypes>
    <recordTypes>
        <fullName>Strategic_Initiatives</fullName>
        <active>true</active>
        <description>Used for strategic initiatives locations</description>
        <label>Strategic Initiatives</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>